<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditBlacklistItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_blacklist_item_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/allowSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:text="@string/edit_rule_allow"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patternTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:hint="@string/edit_rule_pattern">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/patternEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_pattern_hint" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/testNumberTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:hint="@string/edit_rule_test_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/testNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/testResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone"
            tools:text="Matches +46701234567"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="3 calls, last: Aug 01, 2020 10:10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_padding"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="6dp"
                android:contentDescription="@string/info_icon_description"
                android:src="@drawable/ic_info_24dp"
                android:tint="@color/gray" />

            <TextView
                android:id="@+id/contactsNotBlockedNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts_are_not_blocked_blacklist_notice"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
